# ARC-Algorithm

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  arc  comparison.ipynb  pcache_res.txt  runtests
arc_in_py/: arc.py  data.txt  data_10.txt  main.py
include/: arc.hpp  io.hpp
include/arc/: arc.hpp  io.hpp
include/pcache/: pcache.hpp
src/: arc.cpp  io.cpp  main.cpp  pmain.cpp  test.cpp
src/arc/: CMakeLists.txt  io.cpp  main.cpp
src/pcache/: CMakeLists.txt  pmain.cpp
tests/: CMakeLists.txt  cases.txt  data_30_2000.txt  main.cpp  test_cache.cpp  test_history.cpp
